# discriminord

./: .gitignore  Cargo.toml  LICENSE  README.md  discriminord.js  discriminord_bg.js  discriminord_bg.wasm
src/: lib.rs  main.rs
static/: index.html  main.js
