[package]
name = "discriminord"
version = "0.2.0"
authors = ["Adam Gausmann <agausmann@fastmail.com>"]
edition = "2018"
description = "Create images that look different in Discord light and dark themes"
readme = "README.md"
repository = "https://github.com/agausmann/discriminord"
license = "0BSD"
categories = ["command-line-utilities", "graphics", "multimedia::images"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.12"
structopt = "0.3.21"
